--- a/index.html
+++ b/index.html
@@ -40,15 +40,19 @@
             <label for="name">Ваше имя</label>
             <input type="text" placeholder="Введите имя" id="name">
           </div>
-          <div>
+
+            <div class="form_group">
+
             <label for="email">Электронный адрес</label>
             <input type="email" placeholder="***@yandex.ru" id="email">
           </div>
-          <div>
+
+            <div class="form_group">
             <label for="phone">Номер телефона</label>
             <input type="tel" placeholder="7 (999) 999-99-99" id="phone">
           </div>
-          <div>
+
+          <div class="form_group">
             <label for="budget">Примерный бюджет</label> 
             <select id="budget">
                <option value="10-30">10 000₽ – 30 000₽</option>               <option value="10-30"> 10 000₽ – 30 000₽</option>
@@ -56,11 +60,47 @@
                <option value="60-100">60 000₽ – 100 000₽</option>
                <option value="100+">100 000₽</option>
              </select>
-            </div>
+          </div>
             <button type="submit" class="form__submit">Отправить заявку</button>
         </form>
         </div>
 
       </section>
+
+<footer>
+<div class="footer__container">
+
+<div class="footer__group">
+<h3>Позвонить нам:</h3>
+<div class="footer__links">
+  <a href="74959999999">+7 (495) 999-99-90</a>
+</div>
+</div>
+
+<div class="footer__group">
+  <h3>Решения для дома:</h3>
+  <div class="footer__links">
+    <a href="#">Солнечные панели GreenRobotic</a>
+    <a href="#">Системы солнечных панелей GreenStation</a>
+  </div>
+
+  </div>
+
+  <div class="footer__group">
+    <h3>Компания</h3>
+    <div class="footer__links">
+      <a href="#">Контакты</a>
+      <a href="#">Вакансии</a>
+      <a href="#">СМИ</a>
+    </div>
+  </div>
+
+</div>
+
+<div class="footer__copyright">
+GreenCorp © 2021.
+</div>
+</footer>
+
 </body>
 </html>
